--- a/linter_exclusions.yml
+++ b/linter_exclusions.yml
@@ -790,6 +790,9 @@ backup vault backup-properties set:
     soft_delete_feature_state:
       rule_exclusions:
       - option_length_too_long
+    cross_region_restore_flag:
+      rule_exclusions:
+      - option_length_too_long
 batch account create:
   parameters:
     encryption_key_identifier:
