--- a/scripts/live_test/monitor.yml
+++ b/scripts/live_test/monitor.yml
@@ -17,4 +17,4 @@ jobs:
     - bash: |
         pip install mysql-connector-python
         pip install request
-        python /home/vsts/work/1/s/scripts/live_test/monitor.py
+        python /home/vsts/work/1/s/scripts/live_test/monitor.py "$(DB_PWD)" "$(GITHUB_TOKEN)"
