--- a/scripts/live_test/monitor.yml
+++ b/scripts/live_test/monitor.yml
@@ -16,5 +16,5 @@ jobs:
         architecture: 'x64'
     - bash: |
         pip install mysql-connector-python
-        pip install request
+        pip install requests
         python /home/vsts/work/1/s/scripts/live_test/monitor.py "$(DB_PWD)" "$(GITHUB_TOKEN)"
