--- a/src/azure-cli/azure/cli/command_modules/cdn/tests/latest/recordings/test_cdn_profile_delete_not_found.yaml
+++ b/src/azure-cli/azure/cli/command_modules/cdn/tests/latest/recordings/test_cdn_profile_delete_not_found.yaml
@@ -15,12 +15,12 @@ interactions:
       ParameterSetName:
       - -g -n
       User-Agent:
-      - python/3.8.5 (macOS-10.16-x86_64-i386-64bit) msrest/0.6.18 msrest_azure/0.6.3
-        azure-mgmt-cdn/5.1.0 Azure-SDK-For-Python AZURECLI/2.15.0
+      - python/3.7.9 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
+        azure-mgmt-cdn/7.0.0 Azure-SDK-For-Python AZURECLI/2.17.1
       accept-language:
       - en-US
     method: DELETE
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Cdn/profiles/foo12345?api-version=2020-04-15
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Cdn/profiles/foo12345?api-version=2020-09-01
   response:
     body:
       string: ''
@@ -28,7 +28,7 @@ interactions:
       cache-control:
       - no-cache
       date:
-      - Wed, 18 Nov 2020 22:29:30 GMT
+      - Mon, 15 Feb 2021 17:24:13 GMT
       expires:
       - '-1'
       pragma:
@@ -38,7 +38,7 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-deletes:
-      - '14999'
+      - '14995'
     status:
       code: 204
       message: No Content
