--- a/src/azure-cli/requirements.py3.windows.txt
+++ b/src/azure-cli/requirements.py3.windows.txt
@@ -105,6 +105,8 @@ jsmin==2.2.2
 knack==0.8.0rc2
 MarkupSafe==1.1.1
 mock==4.0.2
+msal==1.8.0
+msal-extensions==0.3.0
 msrest==0.6.18
 msrestazure==0.6.3
 oauthlib==3.0.1
